--- a/src/GithubInsight.Domain/GithubInsight.Domain.csproj
+++ b/src/GithubInsight.Domain/GithubInsight.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Notifications\" />
-    <Folder Include="Validations\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
